EAEC-28: Fix sseveral inconsistencies on 2O36 O animation

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -118,6 +118,7 @@ $round-image-size-big: 580px;
 $round-image-vertical-breakpoint-lg: 900px;
 $round-image-vertical-breakpoint-md: 800px;
 $round-image-vertical-breakpoint-sm: 600px;
+$round-image-vertical-breakpoint-xsm: 400px;
 
 $icon-button-size: 64px;
 $icon-button-size--small: 48px;
