--- a/styles/components/_component-media-with-expansion.scss
+++ b/styles/components/_component-media-with-expansion.scss
@@ -68,7 +68,7 @@
       margin: 20px auto;
       // max-width: map-get($container-max-widths, 'md');
       .text-body{
-        &:before{
+        &::before{
           content: unset;
         }
       }
