--- a/styles/components/_menu-main.scss
+++ b/styles/components/_menu-main.scss
@@ -8,12 +8,12 @@
   overflow-x: hidden;
   overflow-y: auto;
 
-  &:before {
+  &::before {
     content: '';
     margin-top: auto;
   }
 
-  &:after {
+  &::after {
     content: '';
     margin-bottom: auto;
   }
