--- a/styles/components/_text-large-image.scss
+++ b/styles/components/_text-large-image.scss
@@ -46,7 +46,7 @@
     @include media-breakpoint-up(md) {
       margin-top: 0;
       margin-bottom: 0;
-      margin-right: -16.66666667%;
+      margin-right: -16.667%;
     }
   }
 
@@ -62,7 +62,7 @@
     .image-container {
       @include media-breakpoint-up(md) {
         margin-right: 0;
-        margin-left: -16.66666667%;
+        margin-left: -16.667%;
       }
     }
   }
