--- a/styles/components/_bottom-navigation.scss
+++ b/styles/components/_bottom-navigation.scss
@@ -11,7 +11,7 @@
 
     @include media-breakpoint-up(md) {
       &:last-child {
-        &:before {
+        &::before {
           content: '';
           position: absolute;
           left: -1px;
