--- a/styles/components/_component-intro-text.scss
+++ b/styles/components/_component-intro-text.scss
@@ -21,7 +21,7 @@
 
     @include media-breakpoint-up(md) {
       margin-bottom: 0;
-      margin-left: -16.66666667%;
+      margin-left: -16.667%;
     }
   }
 
