--- a/styles/components/_header-top.scss
+++ b/styles/components/_header-top.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: relative;
   // padding: 60px 0 80px 0;
   text-align: center;
 
@@ -17,8 +16,8 @@
     will-change: opacity, margin-left;
     transition:
       opacity $main-carousel-transition-duration ease-in-out;
-      //transform $main-carousel-transition-duration ease-in-out;
-      //margin-left $main-carousel-transition-duration ease-in-out;
+    //transform $main-carousel-transition-duration ease-in-out;
+    //margin-left $main-carousel-transition-duration ease-in-out;
     width: 100%;
     margin-left: 0;
     transform: translate(0, 0);
@@ -92,11 +91,19 @@
   .subtitle {
     margin: 0 auto;
     max-width: map-get($container-max-widths, 'sm');
+
+    @media (min-width: map-get($grid-breakpoints, 'sm')) and (max-height: $round-image-vertical-breakpoint-md) {
+      font-size: $font-size-base;
+    }
   }
 
   @keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:1;
+    }
   }
 
   .actions {
@@ -178,6 +185,7 @@
       width: $round-image-size-tiny;
       height: $round-image-size-tiny;
       bottom: 40%;
+      border-width: 6px;
     }
 
     img {
@@ -244,7 +252,7 @@
     background: $body-bg;
 
     .header-inner-content__img {
-      bottom: 0px;
+      bottom: 0;
       width: 110vw;
       height: 110vw;
       // transform: translate(0, 0);
@@ -269,6 +277,14 @@
       // 0.17em is the correction needed to make it optically centered.
       margin: 12px 0 calc(32px - 0.17em) 0;
       white-space: normal;
+
+      @media (min-width: map-get($grid-breakpoints, 'sm')) and (max-height: $round-image-vertical-breakpoint-md) {
+        font-size: $h2-font-size--desktop;
+      }
+
+      @media (min-width: map-get($grid-breakpoints, 'sm')) and (max-height: $round-image-vertical-breakpoint-sm) {
+        font-size: $h2-font-size;
+      }
     }
 
     .pretitle {
