--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -4,36 +4,40 @@
 
   &.video-no-played {
     .header-inner-content__img {
-      width: 80vw !important;
-      height: 80vh !important;
+      width: 140vh !important;
+      height: 140vh !important;
       border-radius: 50%;
       margin-left: 0 !important;
       margin-top: 0 !important;
       z-index: 999 !important;
-      bottom: calc(50% - (100px / 2)) !important;
-      margin-bottom: calc(-40vh + 6px) !important;
+      bottom: 50% !important;
+      margin-bottom: calc(-70vh + 6px) !important;
       position: relative;
 
-      @media (orientation: portrait) {
-        width: 140vh !important;
-        height: 140vh !important;
-        margin-bottom: calc(-70vh + 6px) !important;
-      }
+      // @media (orientation: portrait) {
+      //   width: 140vh !important;
+      //   height: 140vh !important;
+      //   margin-bottom: calc(-70vh + 6px) !important;
+      // }
 
-      @media (orientation: portrait) and (min-width: map-get($grid-breakpoints, 'md')) {
-        left: calc(-20vh - 12px) !important;
-      }
+      // @media (orientation: portrait) and (min-width: map-get($grid-breakpoints, 'md')) {
+      //   left: calc(-20vh - 50px) !important;
+      // }
 
       @media (orientation: landscape) {
         width: 122vw !important;
         height: 122vw !important;
         margin-bottom: calc(-61vw + 6px) !important;
-      }
-
-      @media (orientation: landscape) and (min-width: map-get($grid-breakpoints, 'md')) {
         left: calc(-10.5vw - 12px) !important;
       }
 
+      @media (max-width: map-get($grid-breakpoints, 'md')) and (max-height: $round-image-vertical-breakpoint-sm) and (orientation: portrait) {
+        left: calc(-20vh - 50px) !important;
+      }
+
+      @media (max-width: map-get($grid-breakpoints, 'md')) and (max-height: $round-image-vertical-breakpoint-sm) and (orientation: landscape) {
+        left: calc(-10.5vw - 6px) !important;
+      }
     }
 
     .content-header__container {
@@ -56,7 +60,7 @@
   .mute_button {
     position: absolute;
     bottom: 18px;
-    right: 24px;
+    right: 8px;
     z-index: 101;
 
     .is-transitioning &,
@@ -79,6 +83,17 @@
         height: 64px;
       }
     }
+
+    // Smaller on small heights
+    @media (min-width: map-get($grid-breakpoints, 'sm')) and (max-height: $round-image-vertical-breakpoint-md) {
+      bottom: 18px;
+      right: 24px;
+
+      .icon-button {
+        width: 48px;
+        height: 48px;
+      }
+    }
   }
 
   video {
@@ -86,7 +101,6 @@
     height: 100%;
     object-fit: cover;
     transition: all 0.2s;
-
   }
 
   .video-circle {
@@ -109,7 +123,6 @@
     width: 200px;
     height: 200px;
     box-shadow: $default-box-shadow;
-    transition: $default-transition;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 14px;
