--- a/styles/components/_separator.scss
+++ b/styles/components/_separator.scss
@@ -4,7 +4,7 @@
   padding: $default-section-padding 0;
   width: 100%;
 
-  &:before {
+  &::before {
     content: '';
     position: absolute;
     top: 0;
@@ -20,10 +20,7 @@
 
   &.line-separator--overflowed-top-1-3{
     padding: math.div($default-section-padding, 1.5) 0;
-  }
-
-  &.line-separator--overflowed-top-1-3 {
-    &:before {
+    &::before {
       height: 170%;
       top: -60%;
 
@@ -39,4 +36,9 @@
     }
   }
 
+
+  // Remove when vertical space is tiny
+  @media (max-height: $round-image-vertical-breakpoint-xsm) {
+    display: none;
+  }
 }
