--- a/styles/components/_video.scss
+++ b/styles/components/_video.scss
@@ -8,7 +8,6 @@
 }
 
 
-
 .video-vimeo {
   margin: 0 auto;
   width: 100%;
@@ -16,7 +15,7 @@
   position: relative;
   z-index: 0;
 
-  &:before {
+  &::before {
     content: "";
     top: 50%;
     left: 50%;
