--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -162,10 +162,10 @@
     background-color: rgba($color-white, .9);
     transition: $default-transition;
     position: fixed;
-    top: 50%;
+    bottom: 5vh;
     left: 50%;
     margin-top: 40vh;
-    transform: translate(-50%, 50%);
+    transform: translate(-50%, 0%);
     opacity: 0;
     z-index:60;
 
