--- a/styles/components/_text-image-header.scss
+++ b/styles/components/_text-image-header.scss
@@ -10,6 +10,12 @@
 
   .component-media-with-expansion {
     margin: 0 auto 40px;
+    display: block;
+
+    .round-wp {
+      display: block !important;
+    }
+
     @include media-breakpoint-up(md) {
       position: absolute;
       width: 100%;
