Fix small css bug on video quote

--- a/styles/components/_video-quote.scss
+++ b/styles/components/_video-quote.scss
@@ -1,9 +1,9 @@
 .component-video-quote {
-  .main-container {
+  .video-quote__main-container {
     align-items: center;
   }
 
-  .text-container {
+  .video-quote__text-container {
     text-align: center;
     position: relative;
 
