--- a/styles/components/_header-top.scss
+++ b/styles/components/_header-top.scss
@@ -281,12 +281,16 @@
       margin: 12px 0 calc(32px - 0.17em) 0;
       white-space: normal;
 
-      @media (min-width: map-get($grid-breakpoints, 'sm')) and (max-height: $round-image-vertical-breakpoint-md) {
+      @media (min-width: map-get($grid-breakpoints, 'sm')) and (max-height: $round-image-vertical-breakpoint-lg) {
         font-size: $h2-font-size--desktop;
       }
 
       @media (min-width: map-get($grid-breakpoints, 'sm')) and (max-height: $round-image-vertical-breakpoint-sm) {
         font-size: $h2-font-size;
+      }
+
+      @include media-breakpoint-up(md) {
+        max-height: 100%;
       }
     }
 
